# trygl

./: .gitignore  CMakeLists.txt  README.md  defines.h  main.cpp  stdafx.h  todo.txt
core/: Application.cpp  Application.h  Camera.cpp  RenderWindow.cpp  RenderWindow.h  Root.cpp  Root.h  Viewport.cpp  Viewport.h
core/x/: XAdapter.cpp  XAdapter.h
note/: render_to_texture.txt
src/: defines.h  main.cpp  stdafx.cpp  stdafx.h
src/core/: Camera.h  Layer.cpp  Layer.h  RenderWindow.cpp  RenderWindow.h  Root.cpp  Root.h  Scene.cpp  Scene.h  Texture2D.cpp  Texture2D.h  Viewport.cpp  Viewport.h
src/core/glUtils/: Buffer.cpp  Buffer.h  Program.cpp  Program.h
src/core/qt/: QtAdapter.cpp  QtAdapter.h
src/core/x/: XAdapter.cpp  XAdapter.h
src/math/: Timer.h  math.h
